compiler/tools/fpp-check/test/tlm_channel/duplicate_id_implicit.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/tlm_channel/duplicate_id_implicit.fpp: 7.3
  telemetry T3: U32
  ^
error: duplicate identifier value (17 dec, 11 hex)
previous occurrence is here:
[ local path prefix ]/compiler/tools/fpp-check/test/tlm_channel/duplicate_id_implicit.fpp: 3.3
  telemetry T1: U32 id 0x11
  ^
